--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -159,6 +159,11 @@ es:
         section: Sección
       user:
         email: Correo electrónico
+    errors:
+      prohibited_from_being_saved:
+        one: "%{count} error impidió que esta %{model} fuese guardada"
+        other: "%{count} errores impidieron que esta %{model} fuese guardada"
+      section_budget_does_not_match: el proyecto de presupuestos de la sección no coincide con el proyecto de presupuestos de la enmienda
   helpers:
     action:
       show: Ver
