--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -160,7 +160,7 @@ es:
       user:
         email: Correo electrónico
     errors:
-      section_not_unique: no coincide con la sección de la enmienda
+      section_locked: está bloqueada
       chapter_budget_does_not_match: el proyecto de presupuestos no coincide con el proyecto de presupuestos de la enmienda
       prohibited_from_being_saved:
         one: "%{count} error impidió que esta %{model} fuese guardada"
