Fix bug in edit modification and install pry-rails (#44)
* Bump dependencies

* Install pry-rails gem

* Missing translations

* Rename concern and put scope above the methods in modification

* Test for bug when amendment has only 1 modification and section changes

* Fix the bug when amendment has only 1 modification and section changes

* Leo style refactorization

* Delete has_amendment_budget concern, renamed to has_section_budget

* Requested changes in the review

* Second version of requested changes

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -160,6 +160,8 @@ es:
       user:
         email: Correo electrónico
     errors:
+      section_locked: está bloqueada
+      chapter_budget_does_not_match: el proyecto de presupuestos no coincide con el proyecto de presupuestos de la enmienda
       prohibited_from_being_saved:
         one: "%{count} error impidió que esta %{model} fuese guardada"
         other: "%{count} errores impidieron que esta %{model} fuese guardada"
