--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -165,6 +165,7 @@ es:
         email: Correo electrónico
     errors:
       section_locked: está bloqueada
+      type_locked: está bloqueado
       chapter_budget_does_not_match: el proyecto de presupuestos no coincide con el proyecto de presupuestos de la enmienda
       prohibited_from_being_saved:
         one: "%{count} error impidió que esta %{model} fuese guardada"
@@ -178,6 +179,10 @@ es:
       destroy: Eliminar
       back: Atrás
       cancel: Cancelar
+      completed: Completa
+      incomplete_positive_balance: 'Incompleta: balance positivo'
+      incomplete_negative_balance: 'Incompleta: balance positivo'
+      incomplete_empty: 'Incompleta: vacía'
     label:
       amendment:
         number: Nº de enmienda
