Task for sincronize territories (country, comunities, provinces) with directory

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -184,6 +184,19 @@ es:
       organism:
         title: Título
         section: Sección
+      territories/country:
+        type: ''
+        type:
+          one: 'País'
+          other: 'Paises'
+      territories/comunity:
+        type:
+          one: 'Comunidad'
+          other: 'Comunidades'
+      territories/province:
+        type:
+          one: 'Provincia'
+          other: 'Provincias'
       user:
         email: Correo electrónico
     errors:
